[package]
name = "filer"
version = "0.1.0"
edition = "2024"
authors = ["Ali Zakariyah zakariyahali100@gmail.com"]
description = "Interactive CLI file and folder manager"
license = "MIT"

[[bin]]
name = "filer"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5.45", features = ["derive", "cargo"] }

# Interactive prompts
inquire = "0.7.5"
dialoguer = "0.11"
console = "0.16"

# File operations
fs_extra = "1.3"
walkdir = "2.5"
trash = "5.2.2"
filetime = "0.2.25"

# Path handling
pathdiff = "0.2.3"
glob = "0.3.3"
path-clean = "1.0.1"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.14"

# Output formatting
colored = "3.0.0"
indicatif = "0.18"
prettytable-rs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Date/Time
chrono = "0.4.41"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "handleapi"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"